projects/vb6parse/snapshots/tests/library/math/cos/cos_harmonic_motion.snap
---
source: projects/vb6parse/tests/library/math/cos.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: DimStatement
      children:
        - kind: ConstKeyword
          text: Const
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Pi
        - kind: Whitespace
          text: " "
        - kind: AsKeyword
          text: As
        - kind: Whitespace
          text: " "
        - kind: DoubleKeyword
          text: Double
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: NumericLiteralExpression
          children:
            - kind: SingleLiteral
              text: "3.14159265358979"
        - kind: Newline
          text: "\n"
    - kind: AssignmentStatement
      children:
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: position
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: BinaryExpression
          children:
            - kind: IdentifierExpression
              children:
                - kind: Identifier
                  text: amplitude
            - kind: Whitespace
              text: " "
            - kind: MultiplicationOperator
              text: "*"
            - kind: Whitespace
              text: " "
            - kind: CallExpression
              children:
                - kind: Identifier
                  text: Cos
                - kind: LeftParenthesis
                  text: (
                - kind: ArgumentList
                  children:
                    - kind: Argument
                      children:
                        - kind: BinaryExpression
                          children:
                            - kind: BinaryExpression
                              children:
                                - kind: BinaryExpression
                                  children:
                                    - kind: NumericLiteralExpression
                                      children:
                                        - kind: IntegerLiteral
                                          text: "2"
                                    - kind: Whitespace
                                      text: " "
                                    - kind: MultiplicationOperator
                                      text: "*"
                                    - kind: Whitespace
                                      text: " "
                                    - kind: IdentifierExpression
                                      children:
                                        - kind: Identifier
                                          text: Pi
                                - kind: Whitespace
                                  text: " "
                                - kind: MultiplicationOperator
                                  text: "*"
                                - kind: Whitespace
                                  text: " "
                                - kind: IdentifierExpression
                                  children:
                                    - kind: Identifier
                                      text: frequency
                            - kind: Whitespace
                              text: " "
                            - kind: MultiplicationOperator
                              text: "*"
                            - kind: Whitespace
                              text: " "
                            - kind: IdentifierExpression
                              children:
                                - kind: TimeKeyword
                                  text: time
                - kind: RightParenthesis
                  text: )
        - kind: Newline
          text: "\n"
